--- a/Banking_Churn_Analysis_and_Prediction_Using_ML.ipynb
+++ b/Banking_Churn_Analysis_and_Prediction_Using_ML.ipynb
@@ -2901,235 +2901,30 @@
       "cell_type": "code",
       "source": [
         "xx = x.sample()\n",
-        "xx = np.array(values)"
+        "xx = np.array(values)\n",
+        "xx"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 98
+          "base_uri": "https://localhost:8080/"
         },
         "id": "jRzQaIqKxcg5",
-        "outputId": "e4fbc475-0dae-42e0-8f03-1b2b703f1079"
+        "outputId": "539454a8-fc67-45f5-caf2-0ec5a73873bf"
       },
-      "execution_count": 129,
+      "execution_count": 143,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "      CreditScore  Geography  Gender  Age  Tenure  Balance  NumOfProducts  \\\n",
-              "1733          614          1       1   32       7  99462.8              2   \n",
-              "\n",
-              "      HasCrCard  IsActiveMember  EstimatedSalary  Complain  \\\n",
-              "1733          1               1         51117.06         0   \n",
-              "\n",
-              "      Satisfaction Score  Card Type  Point Earned  \n",
-              "1733                   5          2           238  "
-            ],
-            "text/html": [
-              "\n",
-              "  <div id=\"df-8843961b-9d00-4b97-b8dd-6734c6914449\" class=\"colab-df-container\">\n",
-              "    <div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>CreditScore</th>\n",
-              "      <th>Geography</th>\n",
-              "      <th>Gender</th>\n",
-              "      <th>Age</th>\n",
-              "      <th>Tenure</th>\n",
-              "      <th>Balance</th>\n",
-              "      <th>NumOfProducts</th>\n",
-              "      <th>HasCrCard</th>\n",
-              "      <th>IsActiveMember</th>\n",
-              "      <th>EstimatedSalary</th>\n",
-              "      <th>Complain</th>\n",
-              "      <th>Satisfaction Score</th>\n",
-              "      <th>Card Type</th>\n",
-              "      <th>Point Earned</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>1733</th>\n",
-              "      <td>614</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>32</td>\n",
-              "      <td>7</td>\n",
-              "      <td>99462.8</td>\n",
-              "      <td>2</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>51117.06</td>\n",
-              "      <td>0</td>\n",
-              "      <td>5</td>\n",
-              "      <td>2</td>\n",
-              "      <td>238</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>\n",
-              "    <div class=\"colab-df-buttons\">\n",
-              "\n",
-              "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8843961b-9d00-4b97-b8dd-6734c6914449')\"\n",
-              "            title=\"Convert this dataframe to an interactive table.\"\n",
-              "            style=\"display:none;\">\n",
-              "\n",
-              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\" viewBox=\"0 -960 960 960\">\n",
-              "    <path d=\"M120-120v-720h720v720H120Zm60-500h600v-160H180v160Zm220 220h160v-160H400v160Zm0 220h160v-160H400v160ZM180-400h160v-160H180v160Zm440 0h160v-160H620v160ZM180-180h160v-160H180v160Zm440 0h160v-160H620v160Z\"/>\n",
-              "  </svg>\n",
-              "    </button>\n",
-              "\n",
-              "  <style>\n",
-              "    .colab-df-container {\n",
-              "      display:flex;\n",
-              "      gap: 12px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert {\n",
-              "      background-color: #E8F0FE;\n",
-              "      border: none;\n",
-              "      border-radius: 50%;\n",
-              "      cursor: pointer;\n",
-              "      display: none;\n",
-              "      fill: #1967D2;\n",
-              "      height: 32px;\n",
-              "      padding: 0 0 0 0;\n",
-              "      width: 32px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert:hover {\n",
-              "      background-color: #E2EBFA;\n",
-              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "      fill: #174EA6;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-buttons div {\n",
-              "      margin-bottom: 4px;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert {\n",
-              "      background-color: #3B4455;\n",
-              "      fill: #D2E3FC;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert:hover {\n",
-              "      background-color: #434B5C;\n",
-              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-              "      fill: #FFFFFF;\n",
-              "    }\n",
-              "  </style>\n",
-              "\n",
-              "    <script>\n",
-              "      const buttonEl =\n",
-              "        document.querySelector('#df-8843961b-9d00-4b97-b8dd-6734c6914449 button.colab-df-convert');\n",
-              "      buttonEl.style.display =\n",
-              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "\n",
-              "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-8843961b-9d00-4b97-b8dd-6734c6914449');\n",
-              "        const dataTable =\n",
-              "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-              "                                                    [key], {});\n",
-              "        if (!dataTable) return;\n",
-              "\n",
-              "        const docLinkHtml = 'Like what you see? Visit the ' +\n",
-              "          '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-              "          + ' to learn more about interactive tables.';\n",
-              "        element.innerHTML = '';\n",
-              "        dataTable['output_type'] = 'display_data';\n",
-              "        await google.colab.output.renderOutput(dataTable, element);\n",
-              "        const docLink = document.createElement('div');\n",
-              "        docLink.innerHTML = docLinkHtml;\n",
-              "        element.appendChild(docLink);\n",
-              "      }\n",
-              "    </script>\n",
-              "  </div>\n",
-              "\n",
-              "\n",
-              "  <div id=\"id_9550136c-396d-4761-b945-6cabb5367d5c\">\n",
-              "    <style>\n",
-              "      .colab-df-generate {\n",
-              "        background-color: #E8F0FE;\n",
-              "        border: none;\n",
-              "        border-radius: 50%;\n",
-              "        cursor: pointer;\n",
-              "        display: none;\n",
-              "        fill: #1967D2;\n",
-              "        height: 32px;\n",
-              "        padding: 0 0 0 0;\n",
-              "        width: 32px;\n",
-              "      }\n",
-              "\n",
-              "      .colab-df-generate:hover {\n",
-              "        background-color: #E2EBFA;\n",
-              "        box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "        fill: #174EA6;\n",
-              "      }\n",
-              "\n",
-              "      [theme=dark] .colab-df-generate {\n",
-              "        background-color: #3B4455;\n",
-              "        fill: #D2E3FC;\n",
-              "      }\n",
-              "\n",
-              "      [theme=dark] .colab-df-generate:hover {\n",
-              "        background-color: #434B5C;\n",
-              "        box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-              "        filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-              "        fill: #FFFFFF;\n",
-              "      }\n",
-              "    </style>\n",
-              "    <button class=\"colab-df-generate\" onclick=\"generateWithVariable('xx')\"\n",
-              "            title=\"Generate code using this dataframe.\"\n",
-              "            style=\"display:none;\">\n",
-              "\n",
-              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-              "       width=\"24px\">\n",
-              "    <path d=\"M7,19H8.4L18.45,9,17,7.55,7,17.6ZM5,21V16.75L18.45,3.32a2,2,0,0,1,2.83,0l1.4,1.43a1.91,1.91,0,0,1,.58,1.4,1.91,1.91,0,0,1-.58,1.4L9.25,21ZM18.45,9,17,7.55Zm-12,3A5.31,5.31,0,0,0,4.9,8.1,5.31,5.31,0,0,0,1,6.5,5.31,5.31,0,0,0,4.9,4.9,5.31,5.31,0,0,0,6.5,1,5.31,5.31,0,0,0,8.1,4.9,5.31,5.31,0,0,0,12,6.5,5.46,5.46,0,0,0,6.5,12Z\"/>\n",
-              "  </svg>\n",
-              "    </button>\n",
-              "    <script>\n",
-              "      (() => {\n",
-              "      const buttonEl =\n",
-              "        document.querySelector('#id_9550136c-396d-4761-b945-6cabb5367d5c button.colab-df-generate');\n",
-              "      buttonEl.style.display =\n",
-              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "\n",
-              "      buttonEl.onclick = () => {\n",
-              "        google.colab.notebook.generateWithVariable('xx');\n",
-              "      }\n",
-              "      })();\n",
-              "    </script>\n",
-              "  </div>\n",
-              "\n",
-              "    </div>\n",
-              "  </div>\n"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "dataframe",
-              "variable_name": "xx",
-              "summary": "{\n  \"name\": \"xx\",\n  \"rows\": 1,\n  \"fields\": [\n    {\n      \"column\": \"CreditScore\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": null,\n        \"min\": 614,\n        \"max\": 614,\n        \"num_unique_values\": 1,\n        \"samples\": [\n          614\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Geography\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": null,\n        \"min\": 1,\n        \"max\": 1,\n        \"num_unique_values\": 1,\n        \"samples\": [\n          1\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Gender\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": null,\n        \"min\": 1,\n        \"max\": 1,\n        \"num_unique_values\": 1,\n        \"samples\": [\n          1\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Age\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": null,\n        \"min\": 32,\n        \"max\": 32,\n        \"num_unique_values\": 1,\n        \"samples\": [\n          32\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Tenure\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": null,\n        \"min\": 7,\n        \"max\": 7,\n        \"num_unique_values\": 1,\n        \"samples\": [\n          7\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Balance\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": null,\n        \"min\": 99462.8,\n        \"max\": 99462.8,\n        \"num_unique_values\": 1,\n        \"samples\": [\n          99462.8\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"NumOfProducts\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": null,\n        \"min\": 2,\n        \"max\": 2,\n        \"num_unique_values\": 1,\n        \"samples\": [\n          2\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"HasCrCard\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": null,\n        \"min\": 1,\n        \"max\": 1,\n        \"num_unique_values\": 1,\n        \"samples\": [\n          1\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"IsActiveMember\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": null,\n        \"min\": 1,\n        \"max\": 1,\n        \"num_unique_values\": 1,\n        \"samples\": [\n          1\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"EstimatedSalary\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": null,\n        \"min\": 51117.06,\n        \"max\": 51117.06,\n        \"num_unique_values\": 1,\n        \"samples\": [\n          51117.06\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Complain\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": null,\n        \"min\": 0,\n        \"max\": 0,\n        \"num_unique_values\": 1,\n        \"samples\": [\n          0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Satisfaction Score\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": null,\n        \"min\": 5,\n        \"max\": 5,\n        \"num_unique_values\": 1,\n        \"samples\": [\n          5\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Card Type\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": null,\n        \"min\": 2,\n        \"max\": 2,\n        \"num_unique_values\": 1,\n        \"samples\": [\n          2\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Point Earned\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": null,\n        \"min\": 238,\n        \"max\": 238,\n        \"num_unique_values\": 1,\n        \"samples\": [\n          238\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
-            }
+              "array([[6.0800000e+02, 2.0000000e+00, 0.0000000e+00, 4.1000000e+01,\n",
+              "        1.0000000e+00, 8.3807860e+04, 1.0000000e+00, 0.0000000e+00,\n",
+              "        1.0000000e+00, 1.1254258e+05, 1.0000000e+00, 3.0000000e+00,\n",
+              "        0.0000000e+00, 4.5600000e+02]])"
+            ]
           },
           "metadata": {},
-          "execution_count": 129
+          "execution_count": 143
         }
       ]
     },
@@ -3166,7 +2961,7 @@
     {
       "cell_type": "code",
       "source": [
-        "scaled_val = loaded_scaler.transform(example)\n",
+        "scaled_val = loaded_scaler.transform(xx)\n",
         "scaled_val"
       ],
       "metadata": {
@@ -3174,9 +2969,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "r3ijOJ4bxLKy",
-        "outputId": "23d8e6f5-16ac-4035-d6da-8c6f99039a56"
+        "outputId": "22fd577f-dcc1-4de5-fe76-7be002a263aa"
       },
-      "execution_count": 127,
+      "execution_count": 144,
       "outputs": [
         {
           "output_type": "stream",
@@ -3190,13 +2985,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[ 0.02441232, -0.9055496 , -1.09499335,  0.10479359, -0.69539349,\n",
-              "        -1.21847056,  0.80843615,  0.64920267, -1.02583358,  1.17286671,\n",
-              "        -0.50994211,  0.70434217, -1.34072928, -0.79473718]])"
+              "array([[-0.45296331,  1.50884694, -1.09499335,  0.19986603, -1.38944225,\n",
+              "         0.12337621, -0.91668767, -1.54035103,  0.97481699,  0.21057501,\n",
+              "         1.96100692, -0.00783394, -1.34072928, -0.67025872]])"
             ]
           },
           "metadata": {},
-          "execution_count": 127
+          "execution_count": 144
         }
       ]
     },
@@ -3211,9 +3006,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tMC8mte_n5L4",
-        "outputId": "23d01f79-9ab5-4b05-a858-01f6e90bec08"
+        "outputId": "738a2243-bed8-4ddc-9430-af6ff81dc12b"
       },
-      "execution_count": 128,
+      "execution_count": 142,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3223,14 +3018,23 @@
             ]
           },
           "metadata": {},
-          "execution_count": 128
+          "execution_count": 142
         }
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Thank you for going through this work till the end, feel free to get in touch if you ahve any questions... :)"
+        "All the imporant models seems to be working well, we'll be using these models for the deployment."
+      ],
+      "metadata": {
+        "id": "l7wh77RDE82T"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Thank you for going through this work till the end, feel free to get in touch if you have any questions... :)"
       ],
       "metadata": {
         "id": "zUm1wP7Cec6a"
