--- a/Banking_Churn_Analysis_and_Prediction_Using_ML.ipynb
+++ b/Banking_Churn_Analysis_and_Prediction_Using_ML.ipynb
@@ -44,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": null,
       "metadata": {
         "id": "NKV-ll1_WOVF"
       },
@@ -79,7 +79,7 @@
         "id": "EDSHB52VWlFj",
         "outputId": "376762ba-8042-4e1f-d1d0-80fcffaf34dd"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -496,7 +496,7 @@
         "id": "Qj12_0NW6W9x",
         "outputId": "69248d9e-32af-41bf-a266-f348c7dce62d"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -522,7 +522,7 @@
         "id": "ffNtXpDL6ZFV",
         "outputId": "459114e1-2257-4638-ea9a-4bae2f50bda3"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -552,7 +552,7 @@
         "id": "gQYrYZhW6vGR",
         "outputId": "49fc0d45-1028-42a8-83ea-f928f99b33a9"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -600,7 +600,7 @@
         "id": "jq-aczAU6wvT",
         "outputId": "9c21ad06-7f97-467b-dc27-9751dbced59e"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1056,7 +1056,7 @@
       "metadata": {
         "id": "9JO656hs6ySj"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1072,7 +1072,7 @@
         "id": "lFGjsCT37NBL",
         "outputId": "176a3f17-781c-4c6a-f022-50ac7170d253"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1466,7 +1466,7 @@
         "id": "hnXqnZEO7OLn",
         "outputId": "a6ab5f5e-b2c1-4975-aff3-6ca26f38ad5a"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1547,7 +1547,7 @@
         "id": "RrRPBi577ivB",
         "outputId": "21852e87-3928-4ce7-caff-86ed413a3867"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1591,7 +1591,7 @@
         "id": "J5IHwHtv7cSc",
         "outputId": "2db41d39-1504-4639-82fa-eb46cf423be7"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1631,7 +1631,7 @@
         "id": "7znhDoRo9bdT",
         "outputId": "b394ab36-becf-44fc-d767-f04bca45ae18"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1663,7 +1663,7 @@
         },
         "outputId": "19bc8eca-ff3b-4b12-9ea6-556150efcf71"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1697,7 +1697,7 @@
         "id": "Wq-Sryf8KS35",
         "outputId": "5ba28767-8cf2-4608-8bf4-b8b37784c1ef"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1739,7 +1739,7 @@
         "id": "K3Jc6VPwVJ0F",
         "outputId": "68234f0c-eef8-4762-f09a-f77b16dca1e3"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1776,7 +1776,7 @@
         "id": "E_IvINaSc7cC",
         "outputId": "49f83dd6-9b98-40f9-b5b0-46f3bad5fd58"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1869,7 +1869,7 @@
         "id": "W4nzI2PtaOvh",
         "outputId": "a6526c63-d37b-4db0-b66f-637ae8cd50a7"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1919,7 +1919,7 @@
         "id": "PnB5h93Ucl3Q",
         "outputId": "b7403ec2-7c78-43a4-9935-9521023d783d"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1989,7 +1989,7 @@
         "id": "49RK3KrYkPM7",
         "outputId": "139fe421-7678-4222-9040-dab0c069fdc7"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2030,7 +2030,7 @@
         },
         "outputId": "c99732e5-3c17-4223-fa4b-9190b319383a"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2070,7 +2070,7 @@
         "id": "rbBZO7bqxWs5",
         "outputId": "2e775ada-7c25-4d10-c65f-1973bf2b0e7b"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2095,7 +2095,7 @@
       "metadata": {
         "id": "3vqemu7vykbb"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2111,7 +2111,7 @@
         "id": "vXzxSofzmP4U",
         "outputId": "ffaf8ad4-7c72-4cfd-90f8-e58298fdeda0"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2139,7 +2139,7 @@
         "id": "i2o4UuL01cxB",
         "outputId": "0708a9f4-a719-43de-d60f-d1371905719e"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2586,7 +2586,7 @@
         "id": "tUaMIjHFVS0m",
         "outputId": "4849039e-13c8-40a1-96ca-9975fc735155"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2613,7 +2613,7 @@
         "id": "PbgIXJLw29p7",
         "outputId": "79288b58-c8f4-43ef-f7a1-bf74165019e1"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2661,7 +2661,7 @@
         "id": "ZoqppesucAai",
         "outputId": "489b88af-61af-47b2-ff4e-eeae853efde2"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2699,7 +2699,7 @@
         "id": "dJ7VjvMdbVmL",
         "outputId": "bb27bb8a-ae27-4ed0-e149-c9767405e2a1"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2744,7 +2744,7 @@
         "id": "5cXvGvjgAeWM",
         "outputId": "f34e9fda-baef-4d57-a092-6ed8da5e03fc"
       },
-      "execution_count": 138,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2782,7 +2782,7 @@
         "id": "wnIz8ERRgddl",
         "outputId": "871ed03e-20ba-4ee1-eb63-9e013fc0d7ac"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2815,13 +2815,13 @@
       "source": [
         "# Loading all the required models\n",
         "loaded_model = joblib.load(\"/content/BCA_model.pkl\", \"r\")\n",
-        "loaded_MLE = joblib.load(\"/content/multi_label_encoder.pkl\", \"r\")\n",
+        "milf = joblib.load(\"/content/multi_label_encoder.pkl\", \"r\")\n",
         "loaded_scaler = joblib.load(\"/content/scaler.pkl\", \"r\")"
       ],
       "metadata": {
         "id": "EdVUFewZjl45"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2836,7 +2836,7 @@
         },
         "outputId": "866402a8-66cc-4081-cc09-e58adebd434f"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2859,6 +2859,33 @@
     {
       "cell_type": "code",
       "source": [
+        "geo, gender, card_type = milf.transform(['Geography','Gender',\"Card Type\"],['Spain','Male','GOLD'])\n",
+        "geo, gender, card_type"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PcCIhRHbmULY",
+        "outputId": "79c1dac5-4ba9-45ad-e789-4f696c5fd1f6"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(2, 1, 1)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 155
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# values = np.array([619, 0, 0, 42, 2, 0.0, 1, 1, 1, 101348.88, 1, 2, 0, 464]).reshape(1, -1)\n",
         "# values = np.array([850,\t2,\t0,\t43,\t2,\t125510.82,\t1,\t1,\t1,\t79084.10,\t0,\t5,\t1,\t425]).reshape(1, -1)\n",
         "values = np.array([608,\t2,\t0,\t41,\t1,\t83807.86,\t1,\t0,\t1,\t112542.58,\t1,\t3,\t0,\t456]).reshape(1, -1)\n",
@@ -2873,7 +2900,7 @@
         "id": "GxE5RxPLn5OF",
         "outputId": "1f46d0fe-8225-47c3-f64e-2799f3c79539"
       },
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2911,7 +2938,7 @@
         "id": "jRzQaIqKxcg5",
         "outputId": "539454a8-fc67-45f5-caf2-0ec5a73873bf"
       },
-      "execution_count": 143,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2941,7 +2968,7 @@
         "id": "pDBSZHGVn5HM",
         "outputId": "019d726f-505f-4dec-96e2-96a31c744f67"
       },
-      "execution_count": 126,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2971,7 +2998,7 @@
         "id": "r3ijOJ4bxLKy",
         "outputId": "22fd577f-dcc1-4de5-fe76-7be002a263aa"
       },
-      "execution_count": 144,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3008,7 +3035,7 @@
         "id": "tMC8mte_n5L4",
         "outputId": "738a2243-bed8-4ddc-9430-af6ff81dc12b"
       },
-      "execution_count": 142,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3039,6 +3066,102 @@
       "metadata": {
         "id": "zUm1wP7Cec6a"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# # app.py code\n",
+        "# import streamlit as st\n",
+        "# import joblib\n",
+        "# import numpy as np\n",
+        "# import time\n",
+        "# from MLEncoder import MultiLabelEncoder  # importing the custom Multi Label Encoder class\n",
+        "\n",
+        "# # Load Model, Encoder & Scaler\n",
+        "# model = joblib.load('BCA_model.pkl', 'r')\n",
+        "# encoder = joblib.load('multi_label_encoder.pkl', 'r')\n",
+        "# scaler = joblib.load('scaler.pkl', 'r')\n",
+        "\n",
+        "# st.set_page_config(page_title=\"Customer Churn Prediction\", layout=\"centered\")\n",
+        "# st.image(\"https://d1muf25xaso8hp.cloudfront.net/https%3A%2F%2Ff2fa1cdd9340fae53fcb49f577292458.cdn.bubble.io%2Ff1711306378848x345911071866751300%2Fchurn.png?w=384&h=&auto=true&dpr=2.5&fit=crop\", use_container_width=True)\n",
+        "\n",
+        "# # Custom Styling\n",
+        "# st.markdown(\"\"\"\n",
+        "#     <h1 style='text-align: center; color: #4CAF50;'>Customer Churn Prediction</h1>\n",
+        "#     <p style='text-align: center;'>Enter customer details to predict churn.</p>\n",
+        "#     <hr style='border: 1px solid #4CAF50;'>\n",
+        "# \"\"\", unsafe_allow_html=True)\n",
+        "\n",
+        "# # App Title\n",
+        "# st.markdown(\"<h1>📊 Banking Customer Churn Prediction</h1>\", unsafe_allow_html=True)\n",
+        "# st.write(\"Enter customer details below to predict churn.\")\n",
+        "\n",
+        "# # Input Section\n",
+        "# st.markdown(\"---\")\n",
+        "# st.subheader(\"🔹 Customer Details\")\n",
+        "\n",
+        "# # Input Fields\n",
+        "# with st.container():\n",
+        "\n",
+        "#     c_score = st.number_input(\"💳 Credit Score \", min_value=350, max_value=850, step=1)\n",
+        "\n",
+        "#     geo = st.selectbox(\"🌍 State Code\", ['France','Germany','Spain'])\n",
+        "#     gender = st.selectbox(\"🚻 Select Gender\", ['Female', 'Male'])\n",
+        "\n",
+        "#     age = st.number_input(\"📆 Age \", min_value=18, max_value=92, step=1)\n",
+        "#     tenure = st.slider(\"⏳ Tenure \", min_value=1, max_value=10, step=1)\n",
+        "\n",
+        "#     balance = st.number_input(\"💵 Balance \", min_value=0.0, max_value=250898.09, step=1.0, format=\"%.2f\")\n",
+        "\n",
+        "#     products = st.slider(\"📞 Number of Products \", min_value=1, max_value=4, step=1)\n",
+        "\n",
+        "#     credit_card = st.selectbox(\"💳 Has Credit Card? \", ['Yes', 'No'])\n",
+        "#     active = st.selectbox(\"🎯 Active member? \", ['Yes', 'No'])\n",
+        "\n",
+        "#     estimated_sal = st.number_input(\"💵 Estimated Salary \", min_value=11.58, max_value=199992.48, step=1.0, format=\"%.2f\")\n",
+        "\n",
+        "#     complain = st.selectbox(\"❗ Whether the cutomer raised a complaint? \", ['Yes', 'No'])\n",
+        "\n",
+        "#     ratings = st.slider(\"⭐ Raitings given by the customer \", min_value=1, max_value=5, step=1)\n",
+        "\n",
+        "#     card_type = st.selectbox(\"💳 Card type of the customer\", ['DIAMOND', 'GOLD', 'PLATINUM', 'SILVER'])\n",
+        "\n",
+        "#     points_earned = st.number_input(\"✨ Points Earned \", min_value=119, max_value=1000, step=1)\n",
+        "\n",
+        "\n",
+        "# # Convert Inputs\n",
+        "# credit_card = 1 if credit_card == \"Yes\" else 0\n",
+        "# active = 1 if active == \"Yes\" else 0\n",
+        "# complain = 1 if complain == \"Yes\" else 0\n",
+        "\n",
+        "# # Encode categorical columns\n",
+        "# geo, gender, card_type = encoder.transform(['Geography','Gender',\"Card Type\"],[geo, gender, card_type])\n",
+        "\n",
+        "# input_data = np.array([c_score, geo, gender, age, tenure, balance, products, credit_card, active, estimated_sal, complain, ratings, card_type, points_earned])\n",
+        "\n",
+        "# input_data_scaled = scaler.transform(input_data)\n",
+        "\n",
+        "# # Predict Button with Loading Animation\n",
+        "# if st.button(\"🔍 Predict Churn\"):\n",
+        "#     with st.spinner(\"Analyzing customer data...\"):\n",
+        "#         time.sleep(2)  # Short delay for loading animation\n",
+        "#         prediction = model.predict(input_data_scaled)\n",
+        "\n",
+        "#     # Display Result with Icon\n",
+        "#     if prediction[0] == 1:\n",
+        "#         st.error(\"❌ This customer is **LIKELY** to churn.\")\n",
+        "#     else:\n",
+        "#         st.success(\"✅ This customer is **NOT LIKELY** to churn.\")\n",
+        "\n",
+        "# # Footer\n",
+        "# st.markdown(\"---\")\n",
+        "# st.markdown(\"<h5 style='text-align:center;'>Do Visit Us Again ❤️</h5>\", unsafe_allow_html=True)\n"
+      ],
+      "metadata": {
+        "id": "jgZ_nD_hFnsV"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
